<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Copixuelas</string>

    <string name="content_description">image</string>

    <!-- ADS -->
        <string name="ads_banner">ca-app-pub-3940256099942544/6300978111</string>
<!--    <string name="ads_banner">ca-app-pub-4515698012373396/5500518392</string>-->
        <string name="ads_intersticial">ca-app-pub-3940256099942544/1033173712</string>
<!--    <string name="ads_intersticial">ca-app-pub-4515698012373396/3619803975</string>-->

    <!-- ERROR -->
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>

    <!-- Warning Dialog -->
    <string name="warning_text_title">Advertencia</string>
    <string name="warning_text_one">Consumir alcohol es perjudicial para la salud.</string>
    <string name="warning_text_two" tools:ignore="Typos">Al utilizar esta aplicación asume ser el responsable de todas las repercusiones que el uso de Copixuelas pudiese generar.</string>
    <string name="warning_text_three"><b>SI BEBES, NO CONDUZCAS.</b></string>
    <string name="warning_text_btn">ENTENDIDO</string>

    <!-- Category -->
    <string name="category_avqp">A ver qué pasa</string>
    <string name="category_moneda">La moneda</string>
    <string name="category_qprefieres">Qué prefieres</string>
    <string name="category_pointing">La señalación</string>
    <string name="category_botella">La botella</string>
    <string name="category_maletin">El maletín</string>
    <string name="category_mimica">Mímica</string>
    <string name="category_more_games">¿Más juegos?</string>
    <string name="mmfsinURL">https://play.google.com/store/apps/developer?id=mmfsin</string>

    <!-- INSTRUCCIONES -->
    <string name="ints_title">¿Cómo se juega?</string>
    <string name="inst_avqp">Esto es muy fácil.\n\n<b>Cada vez le toca a una persona.</b>\n\nPulsa la pantalla y haz lo que dice el móvil.\n\nLas <b>REGLAS</b> se mantienen durante todo el juego.\n\nLas <b>RONDAS</b> duran hasta que te vuelva a tocar.</string>
    <string name="inst_moneda">Alguien lee la pregunta <b>en silencio</b>.\n\nDespués pulsa el botón <b>continuar</b> y le da el móvil a quien encaje con la pregunta.\nEsa persona gira la moneda:\n\nSi sale <b>CARA</b> nunca se sabrá cuál era la pregunta\n\nSi sale <b>CRUZ</b> se revela la pregunta</string>
    <string name="inst_pointing">Leed la pregunta en voz alta.\n\nA la de tres, todo el mundo señala a alguien.\n\n<b>Si te señalan, bebes</b>.\n\nNo vale señalarse a uno mismo ni señalar a tu pareja.</string>
    <string name="inst_qprefieres"><b>Debate</b> con el grupo e intenta convencer de tu elección al resto.\n\nA la de tres, <b>votáis</b>.\n\nLa minoría tiene castigo.</string>
    <string name="inst_botella">Poned el móvil en el centro de la mesa.\n\nDespués girad la botella <b>dos veces</b>.\n\nLas dos personas a las que apunte la botella tendrán que <b>besarse</b>.</string>
    <string name="inst_maletin">Una persona pone el dinero en un maletín <b>sin que nadie le vea</b>.\n\nDespués los cierra y le dice al resto dónde ha guardado el dinero <b><u>pudiendo mentir</u></b>.\n\nSi se acierta dónde está guardado el dinero, <b>ganáis</b>.\n\nSi se falla, hay castigo.</string>
    <string name="inst_mimica">Mantén pulsado la tarjeta para leer la frase.\n\nDespués pulsa el botón <b>empezar</b> y representa mediante mímica, <b>sin hablar ni hacer ruidos</b>, la frase que has leído.\n\nTienes <b>un minuto</b>, si el resto de personas adivinan la frase antes de que se acabe el tiempo, ganáis.\n\nSi falláis, todo el mundo recibe un castigo.</string>
    <string name="inst_btn">Entendido</string>

    <!-- AVQP -->
    <string name="avqp_start">PULSA LA PANTALLA PARA <b>COMENZAR</b></string>

    <!-- MONEDA -->
    <string name="moneda_the_question_is">La pregunta es:</string>
    <string name="moneda_info_1">PRIMERO PULSA <b>CONTINUAR</b></string>
    <string name="moneda_info_2">Después dale el móvil a esa persona</string>
    <string name="moneda_continue"><b>CONTINUAR</b></string>
    <string name="moneda_another_question"><b>OTRA PREGUNTA</b></string>
    <string name="moneda_spin">Gira la moneda</string>
    <string name="moneda_question_was">La pregunta era</string>
    <string name="moneda_cara">CARA</string>
    <string name="moneda_cruz">CRUZ</string>

    <!-- POINTING -->
    <string name="pointing_mini_inst_1">No vale señalarse a uno mismo</string>
    <string name="pointing_mini_inst_2">No vale señalar a tu pareja</string>

    <!-- QUE PREFERIRIAS -->
    <string name="qp_or">O</string>
    <string name="qr_vivir_es_decidir">Versión mejorada de <i>Qué prefieres</i></string>
    <string name="qr_vivir_es_decidir_url">https://play.google.com/store/apps/details?id=com.mmfsin.quepreferirias</string>

    <!-- BOTELLA -->
    <string name="botella_spin">Girar</string>

    <!-- MALETIN -->
    <string name="maletin_title_1">¿En qué maletín quieres guardar el dinero?</string>
    <string name="maletin_title_2">¿Dónde está guardado el dinero?</string>
    <string name="maletin_close">Cerrar maletines</string>
    <string name="maletin_again">Empezar de nuevo</string>
    <string name="maletin_finish_win">¡Habéis ganado!\n</string>
    <string name="maletin_finish_loose">Habéis perdido\nHay castigo</string>

    <!-- MIMICA -->
    <string name="mimic_title">Mantén pulsado la tarjeta\npara ver la frase</string>
    <string name="mimic_start"><b>EMPEZAR</b></string>
    <string name="mimic_other"><b>OTRA PRUEBA</b></string>
    <string name="mimic_timer_restart">59</string>
    <string name="mimic_timer_zero">0</string>

</resources>