<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@drawable/bg_alert_dialog_bottom"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_alert_dialog_top"
        android:fontFamily="@font/pixel_font"
        android:gravity="center"
        android:paddingVertical="24dp"
        android:text="@string/warning_text_title"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/soft_black"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/warning_text_one"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/soft_black"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/warning_text_two"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/warning_text_three"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_button_warning"
            android:elevation="6dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/warning_text_btn"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>