<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/scroll_no_effects"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_box"
    android:clipChildren="false"
    android:clipToPadding="false">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_dialog"
        android:backgroundTint="@color/instructions"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/avqp_font"
            android:text="@string/ints_title"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </RelativeLayout>

    <ScrollView
        style="@style/scroll_no_effects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/soft_black"
                android:textSize="20sp"
                tools:text="@string/inst_avqp" />

            <TextView
                android:id="@+id/tv_accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_box"
                android:backgroundTint="@color/instructions"
                android:elevation="6dp"
                android:fontFamily="@font/avqp_font"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:text="@string/inst_btn"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
