<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_qprefieres"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:paddingTop="24dp"
        android:paddingBottom="32dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/ll_buttons"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btn_instructions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/ic_question" />

                <TextView
                    android:id="@+id/phrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/boogaloo"
                    android:gravity="center"
                    android:text="@string/qp_title"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/tv_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_queprefieres"
                    android:elevation="6dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="32dp"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="OPCIÓN 1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@color/black" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:gravity="center"
                        android:text="@string/qp_or"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_weight="5"
                        android:background="@color/black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_queprefieres"
                    android:elevation="6dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="32dp"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="OPCIÓN 2" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ll_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_vivir_es_decidir"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right">

        <ImageView
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_quepref_next"
            android:contentDescription="@string/content_description"
            android:scaleX="-1" />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_quepref_next"
            android:contentDescription="@string/content_description" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_vivir_es_decidir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_quepref_another_app"
        android:drawablePadding="12dp"
        android:elevation="6dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/qr_vivir_es_decidir"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableEndCompat="@drawable/ic_quepref_ko"
        app:drawableStartCompat="@drawable/ic_quepref_ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/gl_left"
        app:layout_constraintRight_toRightOf="@id/gl_right" />

</androidx.constraintlayout.widget.ConstraintLayout>